--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@ b.conum *{color:inherit!important}
 link.rel = 'stylesheet';
 link.type = 'text/css';
 link.href = window.location.search.match( /print-pdf/gi ) ? "reveal.js/css/print/pdf.css" : "reveal.js/css/print/paper.css";
-document.getElementsByTagName( 'head' )[0].appendChild( link );</script><!--[if lt IE 9]><script src="reveal.js/lib/js/html5shiv.js"></script><![endif]--></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Dependency Management</h1><div class="preamble"><div class="paragraph"><p><a href="https://h-its.org">HITS gGmbH</a></p></div>
-<div class="paragraph"><p><a href="mailto:bernd.doser@h-its.org">Bernd Doser</a>, March 11, 2019</p></div>
+document.getElementsByTagName( 'head' )[0].appendChild( link );</script><!--[if lt IE 9]><script src="reveal.js/lib/js/html5shiv.js"></script><![endif]--></head><body><div class="reveal"><div class="slides"><section class="title" data-state="title"><h1>Dependency Management</h1><div class="preamble"><div class="paragraph"><p><a href="mailto:bernd.doser@h-its.org">Bernd Doser</a></p></div>
+<div class="paragraph"><p>November 5, 2019</p></div>
+<div class="imageblock" style=""><img src="images/HITS_RGB_eng.jpg" alt="HITS RGB eng" width="40%"></div>
+<div class="paragraph"><p><a href="https://h-its.org">HITS gGmbH</a></p></div>
 <div class="paragraph"><p><a href="https://twitter.com/BerndDoser"><span class="icon"><i class="fa fa-twitter"></i></span></a> <a href="https://github.com/BerndDoser"><span class="icon"><i class="fa fa-github"></i></span></a></p></div></div></section>
 <section id="_who_am_i"><h2>Who am I?</h2><div class="ulist"><ul><li><p><a href="https://github.com/HITS-MBM/gromacs-fda">GROMACS-FDA</a></p></li><li><p><a href="https://github.com/HITS-AIN/PINK">PINK</a></p></li><li><p><a href="https://github.com/HITS-MCM/gromacs-ramd">GROMACS-RAMD</a></p></li><li><p><a href="https://emcl-gitlab.iwr.uni-heidelberg.de/hiflow3.org/hiflow3">HiFlow3</a></p></li></ul></div></section>
 <section id="_outline"><h2>Outline</h2><div class="ulist"><ul><li class="fragment"><p>Introduction dependency management</p></li><li class="fragment"><p>Docker development environment</p></li><li class="fragment"><p>Visual Studio Code</p></li><li class="fragment"><p>Python</p><div class="ulist"><ul><li><p>PIP, virtenv, setup.py, wheels</p></li></ul></div></li><li class="fragment"><p>Conan.io</p><div class="ulist"><ul><li><p>install, create, remotes</p></li></ul></div></li></ul></div></section>
